<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/background_beige">


    <LinearLayout
        android:background="@color/splash_green"
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <TextView
            android:layout_marginTop="10dp"
            android:text="@string/home"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plant_disease_detector"
        android:textSize="24sp"
        android:layout_marginTop="30dp"
        android:textColor="@color/deep_leaf"
        android:textStyle="bold"
        android:layout_marginBottom="16dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginBottom="16dp"
        android:scaleType="centerCrop"
        android:background="@drawable/image_border"
        android:contentDescription="@string/captured_image" />

    <TextView
        android:id="@+id/resultText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/text_dark"
        android:textSize="18sp"
        android:layout_marginBottom="20dp" />

    <Button
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/btnCapture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/capture_image"
        android:backgroundTint="@color/splash_green"
        android:textColor="@android:color/white"
        android:layout_marginBottom="12dp" />

    <Button
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/btnPredict"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_disease"
        android:backgroundTint="@color/button_orange"
        android:textColor="@android:color/white" />

</LinearLayout>
